WIP on multilayer RNN

--- a/bikes/05_rnn.ipynb
+++ b/bikes/05_rnn.ipynb
@@ -7,13 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torch.optim import SGD\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "\n",
-    "import matplotlib.pyplot as plt"
+    "from torch.optim import SGD, Adam\n",
+    "from torch.utils.data import DataLoader, TensorDataset"
    ]
   },
   {
@@ -116,20 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f52ad32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "66a4be51",
    "metadata": {},
    "outputs": [],
@@ -205,7 +192,7 @@
    "source": [
     "# Train the model\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(lstm.parameters(), lr=0.01)\n",
+    "optimizer = Adam(lstm.parameters(), lr=0.01)\n",
     "num_epochs = 100\n",
     "for epoch in range(num_epochs):\n",
     "    lstm.train()\n",
@@ -348,7 +335,7 @@
     "dataloader = DataLoader(dataset, batch_size=32)\n",
     "\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(rnn_model.parameters(), lr=0.01)\n",
+    "optimizer = Adam(rnn_model.parameters(), lr=0.01)\n",
     "num_epochs = 100\n",
     "\n",
     "rnn_model.train()\n",
@@ -386,7 +373,7 @@
    "id": "358bc7ec",
    "metadata": {},
    "source": [
-    "## Maintaining state, creating more signal"
+    "## Forecasting several timestamps ahead"
    ]
   },
   {
@@ -413,14 +400,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "in_seq_len = 10\n",
+    "in_seq_len = 60\n",
     "out_seq_len = 21\n",
     "\n",
     "xs, ys = [], []\n",
     "for i in range(len(y) - in_seq_len - out_seq_len):\n",
     "    xs.append(y[i:i + in_seq_len])\n",
     "    for j in range(in_seq_len):\n",
-    "        ys.append(y[i + j + 1:i + j + out_seq_len + 1])\n",
+    "        ys.append(y[i + j + 1: i + j + out_seq_len + 1])\n",
     "\n",
     "xs = np.array(xs).reshape(-1, in_seq_len)\n",
     "ys = np.array(ys).reshape(-1, in_seq_len, out_seq_len)"
@@ -434,7 +421,7 @@
    "outputs": [],
    "source": [
     "sample_idx = 4\n",
-    "fig, axes = plt.subplots(in_seq_len, 1, figsize=(10, 15), sharex=True)\n",
+    "fig, axes = plt.subplots(in_seq_len, 1, figsize=(10, in_seq_len * 1.5), sharex=True)\n",
     "axes = axes.flatten()\n",
     "\n",
     "for i in range(in_seq_len):\n",
@@ -488,15 +475,16 @@
     "        self.ih = nn.Linear(input_size, hidden_size)\n",
     "        self.hh = nn.Linear(hidden_size, hidden_size)\n",
     "        self.ho = nn.Linear(hidden_size, out_seq_len)\n",
-    "        self.h = torch.zeros(batch_size, hidden_size)\n",
     "    \n",
-    "    def forward(self, x: torch.Tensor):\n",
+    "    def forward(self, x: torch.Tensor, h: torch.Tensor | None = None):\n",
+    "        if h is None:\n",
+    "            h = torch.zeros(self.batch_size, self.hidden_size, dtype=torch.float32)\n",
+    "        \n",
     "        outs = []\n",
     "        for i in range(self.in_seq_length):\n",
-    "            self.h = F.relu(self.ih(x[:, i].view(-1, 1)) + self.hh(self.h))\n",
-    "            outs.append(self.ho(self.h))\n",
+    "            h = F.relu(self.ih(x[:, i].view(-1, 1)) + self.hh(h))\n",
+    "            outs.append(self.ho(h))\n",
     "        outs = torch.stack(outs, dim=1)\n",
-    "        self.h = self.h.detach()\n",
     "        return outs"
    ]
   },
@@ -507,23 +495,170 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "in_seq_len = 10\n",
-    "out_seq_len = 21\n",
     "batch_size = 32\n",
     "\n",
     "xs = torch.tensor(xs, dtype=torch.float32)\n",
     "ys = torch.tensor(ys, dtype=torch.float32)\n",
     "\n",
     "ds = TensorDataset(xs, ys)\n",
-    "dl = DataLoader(ds, batch_size=32, drop_last=True)\n",
-    "\n",
-    "\n",
+    "dl = DataLoader(ds, batch_size=32, drop_last=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf3db7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rnn_model = RNN2(in_seq_length=in_seq_len, out_seq_len=out_seq_len, batch_size=batch_size)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(rnn_model.parameters(), lr=1e-03)\n",
+    "optimizer = Adam(rnn_model.parameters(), lr=1e-03)\n",
     "\n",
     "# Training loop\n",
-    "n_epochs = 100\n",
+    "n_epochs = 250\n",
+    "rnn_model.train()\n",
+    "for epoch in range(n_epochs):\n",
+    "    for inputs, labels in dl:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = rnn_model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    if (epoch + 1) % 1 == 0:\n",
+    "        print(f'Epoch [{epoch + 1}/{n_epochs}], Loss: {loss.item():.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bf97ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the fitted values for each batch\n",
+    "plt.plot(x, y)\n",
+    "\n",
+    "for batch_idx, (inputs, _) in enumerate(dl):\n",
+    "    outputs = rnn_model(inputs).detach().numpy()\n",
+    "    x_start = batch_idx * batch_size + in_seq_len + 1\n",
+    "    x_end = x_start + out_seq_len\n",
+    "    plt.plot(x[x_start: x_end], outputs[0, -1, :], color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cba0d0ce",
+   "metadata": {},
+   "source": [
+    "## Multilayer RNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1112d30c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RNN3(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_seq_length: int,\n",
+    "        out_seq_len: int,\n",
+    "        input_size: int = 1,\n",
+    "        hidden_size: int = 25,\n",
+    "        batch_size: int = 32,\n",
+    "        num_layers: int = 1\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.in_seq_length = in_seq_length\n",
+    "        self.out_seq_len = out_seq_len\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.input_size = input_size\n",
+    "        self.batch_size = batch_size\n",
+    "        self.rnn = nn.RNN(input_size=input_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True)\n",
+    "        self.ho = nn.Linear(in_features=hidden_size, out_features=out_seq_len)\n",
+    "    \n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        out, _ = self.rnn(x)\n",
+    "        return self.ho(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6b6d90d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict next value based on the last 10 values\n",
+    "x_start, x_end = 0, 100\n",
+    "n_samples = 1000\n",
+    "noise = 0.3\n",
+    "\n",
+    "x = np.linspace(x_start, x_end, num=n_samples)\n",
+    "y = np.sin(x) + np.cos(0.5 * x) + 0.4 * np.cos(0.1 * x) + np.random.normal(loc=0, scale=noise, size=n_samples)\n",
+    "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8eb862e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare datasets\n",
+    "in_seq_len = 60\n",
+    "out_seq_len = 21\n",
+    "\n",
+    "xs, ys = [], []\n",
+    "for i in range(len(y) - in_seq_len - out_seq_len):\n",
+    "    xs.append(y[i:i + in_seq_len])\n",
+    "    for j in range(in_seq_len):\n",
+    "        ys.append(y[i + j + 1: i + j + out_seq_len + 1])\n",
+    "\n",
+    "xs = np.array(xs).reshape(-1, in_seq_len, 1)\n",
+    "xs = torch.tensor(xs, dtype=torch.float32)\n",
+    "\n",
+    "ys = np.array(ys).reshape(-1, in_seq_len, out_seq_len)\n",
+    "ys = torch.tensor(ys, dtype=torch.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22de6c0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "ds = TensorDataset(xs, ys)\n",
+    "dl = DataLoader(ds, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "696dc0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnn_model = RNN3(\n",
+    "    in_seq_length=in_seq_len,\n",
+    "    out_seq_len=out_seq_len,\n",
+    "    input_size=1,\n",
+    "    hidden_size=25,\n",
+    "    num_layers=3,\n",
+    "    batch_size=batch_size\n",
+    ")\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = Adam(rnn_model.parameters(), lr=1e-03)\n",
+    "\n",
+    "# Training loop\n",
+    "n_epochs = 200\n",
     "rnn_model.train()\n",
     "for epoch in range(n_epochs):\n",
     "    for inputs, labels in dl:\n",
@@ -536,14 +671,6 @@
     "    if (epoch + 1) % 10 == 0:\n",
     "        print(f'Epoch [{epoch + 1}/{n_epochs}], Loss: {loss.item():.4f}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bf97ef1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
