WIP applying RNNs and LSTMs to bike dataset

--- a/bikes/05_rnn.ipynb
+++ b/bikes/05_rnn.ipynb
@@ -671,6 +671,14 @@
     "    if (epoch + 1) % 10 == 0:\n",
     "        print(f'Epoch [{epoch + 1}/{n_epochs}], Loss: {loss.item():.4f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a5ff421",
+   "metadata": {},
+   "source": [
+    "## Multilayer LSTM, Long Horizon"
+   ]
   }
  ],
  "metadata": {
