Section on multilayer RNNs

--- a/bikes/05_rnn copy.ipynb
+++ b/bikes/05_rnn copy.ipynb
@@ -378,8 +378,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the fitted values -- what has the model learned?\n",
-    "..."
+    "# Fitted values\n",
+    "inputs = []\n",
+    "target_index = []\n",
+    "for i in range(0, len(y_transformed) - in_seq_len - out_seq_len, out_seq_len):\n",
+    "    in_ = y_transformed.iloc[i: i + in_seq_len]\n",
+    "    inputs.append(in_)\n",
+    "\n",
+    "    index = y_transformed.iloc[i + in_seq_len: i + in_seq_len + out_seq_len].index\n",
+    "    target_index.append(index)\n",
+    "\n",
+    "inputs = np.array(inputs).reshape(-1, in_seq_len)\n",
+    "inputs = torch.tensor(inputs, dtype=torch.float32)\n",
+    "outputs = model(inputs)\n",
+    "outputs = outputs[:, -1, :].detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4b88a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fitted_values = []\n",
+    "for i, out_seq in enumerate(outputs):\n",
+    "    out_values = pd.Series(out_seq, index=target_index[i])\n",
+    "    out_values = scaler.inverse_transform(out_values)\n",
+    "    fitted_values.append(out_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0d43ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(cycle_counts.index[100:], cycle_counts[\"count\"][100:], lw=1.5, label=\"Observed\")\n",
+    "for i, values in enumerate(fitted_values):\n",
+    "    ax.plot(values, color=\"tab:orange\", label=\"Fitted\" if i == 0 else \"\")\n",
+    "\n",
+    "ax.legend(loc=1)\n",
+    "ax.set(title=LOCATION, ylabel=\"Count\")\n",
+    "for tick in ax.get_xticklabels():\n",
+    "    tick.set_rotation(45)\n",
+    "fig.tight_layout();"
    ]
   },
   {
@@ -396,7 +442,151 @@
    "id": "29c03a55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class RNN_3(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_seq_len: int,\n",
+    "        out_seq_len: int,\n",
+    "        input_size: int = 1,\n",
+    "        hidden_size: int = 25,\n",
+    "        num_layers: int = 1\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.in_seq_len = in_seq_len\n",
+    "        self.out_seq_len = out_seq_len\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_layers = num_layers\n",
+    "        self.rnn = nn.RNN(input_size=input_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True)\n",
+    "        self.ho = nn.Linear(in_features=hidden_size, out_features=out_seq_len)\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        out_, _= self.rnn(x)\n",
+    "        return self.ho(out_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "148610e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = Scaler()\n",
+    "y_transformed = scaler.fit_transform(cycle_counts[\"count\"])\n",
+    "\n",
+    "in_seq_len = 120\n",
+    "out_seq_len = 21\n",
+    "y_train, y_test = [], []\n",
+    "for i in range(len(y_transformed) - in_seq_len - out_seq_len):\n",
+    "    train_seq = y_transformed.iloc[i: i + in_seq_len]\n",
+    "    y_train.append(train_seq.values)\n",
+    "\n",
+    "    for j in range(in_seq_len):\n",
+    "        test_seq = y_transformed.iloc[i + j + 1: i + j + out_seq_len + 1]\n",
+    "        y_test.append(test_seq.values)\n",
+    "\n",
+    "y_train = np.array(y_train).reshape(-1, in_seq_len, 1)\n",
+    "y_test = np.array(y_test).reshape(-1, in_seq_len, out_seq_len)\n",
+    "\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f29228f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = TensorDataset(y_train, y_test)\n",
+    "dataloader = DataLoader(dataset, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf410377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RNN_3(in_seq_len=in_seq_len, out_seq_len=out_seq_len, num_layers=3)\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = Adam(model.parameters(), lr=1e-03)\n",
+    "\n",
+    "n_epochs = 300\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    for y_train, y_test in dataloader:\n",
+    "        optimizer.zero_grad()\n",
+    "        y_hat = model(y_train)\n",
+    "        loss = loss_fn(y_test, y_hat)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f'Epoch [{epoch}/{n_epochs}], Loss: {loss.item():.4f}')\n",
+    "        print(\"------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f2749fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitted values\n",
+    "inputs = []\n",
+    "target_index = []\n",
+    "for i in range(0, len(y_transformed) - in_seq_len - out_seq_len, out_seq_len):\n",
+    "    in_ = y_transformed.iloc[i: i + in_seq_len]\n",
+    "    inputs.append(in_)\n",
+    "\n",
+    "    index = y_transformed.iloc[i + in_seq_len: i + in_seq_len + out_seq_len].index\n",
+    "    target_index.append(index)\n",
+    "\n",
+    "inputs = np.array(inputs).reshape(-1, in_seq_len, 1)\n",
+    "inputs = torch.tensor(inputs, dtype=torch.float32)\n",
+    "outputs = model(inputs)\n",
+    "outputs = outputs[:, -1, :].detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8479df38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fitted_values = []\n",
+    "for i, out_seq in enumerate(outputs):\n",
+    "    out_values = pd.Series(out_seq, index=target_index[i])\n",
+    "    out_values = scaler.inverse_transform(out_values)\n",
+    "    fitted_values.append(out_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71092ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(cycle_counts.index[100:], cycle_counts[\"count\"][100:], lw=1.5, label=\"Observed\")\n",
+    "for i, values in enumerate(fitted_values):\n",
+    "    ax.plot(values, color=\"tab:orange\", label=\"Fitted\" if i == 0 else \"\")\n",
+    "\n",
+    "ax.legend(loc=1)\n",
+    "ax.set(title=LOCATION, ylabel=\"Count\")\n",
+    "for tick in ax.get_xticklabels():\n",
+    "    tick.set_rotation(45)\n",
+    "fig.tight_layout();"
+   ]
   },
   {
    "cell_type": "markdown",
