WIP expand dataset to 3 years

--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -2,10 +2,11 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 25,
             "metadata": {},
             "outputs": [],
             "source": [
+                "import re\n",
                 "import pandas as pd\n",
                 "import numpy as np\n",
                 "import matplotlib.pyplot as plt\n",
@@ -28,6 +29,42 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "locations = [\n",
+                "    \"Beach Road\",\n",
+                "    \"Curran Street\",\n",
+                "    \"East Coast Road\",\n",
+                "    \"Grafton Bridge\",\n",
+                "    \"Grafton Gully\",\n",
+                "    \"Grafton Road\",\n",
+                "    \"Great South Road\",\n",
+                "    \"Highbrook shared path\",\n",
+                "    \"Hopetoun Street\",\n",
+                "    \"Karangahape Road\",\n",
+                "    \"Lagoon Drive\",\n",
+                "    \"Lake Road\",\n",
+                "    \"Lightpath\",\n",
+                "    \"Mangere Bridge\",\n",
+                "    \"Northwestern cycleway – Kingsland\",\n",
+                "    \"Northwestern cycleway – Te Atatu\",\n",
+                "    \"Orewa shared path\",\n",
+                "    \"Quay St (Vector Arena)\",\n",
+                "    \"SH20 shared path (near Dominion Road)\",\n",
+                "    \"Symonds Street\",\n",
+                "    \"Tamaki Drive (both sides of the road)\",\n",
+                "    \"Te Wero Bridge (Wynyard Quarter)\",\n",
+                "    \"Twin Streams shared path\",\n",
+                "    \"Upper Harbour Drive\",\n",
+                "    \"Upper Queen Street\",\n",
+                "    \"Victoria St West\",\n",
+                "]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "LOCATION_MAPPING = {\n",
                 "    \"Tamaki Drive - Parnell\": \"Tamaki Drive\",\n",
                 "    \"Waterview Unitec Shared Path\": \"Waterview Unitec\",\n",
@@ -41,24 +78,54 @@
                 "    \"Lake Road Total Cyclists New\": \"Lake Rd\",\n",
                 "    \"Great South Rd Manukau\": \"Great South Rd\",\n",
                 "    \"Twin Streams Shared Path\": \"Twin Streams\",\n",
-                "}\n",
-                "\n",
-                "def load_cycle_counts(url: str) -> pd.DataFrame:\n",
-                "    if \"august\" in url or \"september\" in url:\n",
-                "        df = pd.read_excel(url, na_values=\"z\", usecols=\"G:CG\")\n",
-                "    else:\n",
-                "        df = pd.read_excel(url, na_values=\"z\", header=2)\n",
-                "    \n",
-                "    df = df.rename(columns={\"Date\": \"Time\", \"Date.1\": \"Time\"})\n",
-                "    df = df.melt(id_vars=\"Time\", var_name=\"Location\", value_name=\"Count\")\n",
-                "    \n",
-                "    df[\"Count\"] = df[\"Count\"].fillna(0)\n",
-                "    df[\"Location\"] = df[\"Location\"].str.replace(r\" Cyclists?$\", \"\", regex=True)\n",
-                "    df[\"Location\"] = df[\"Location\"].str.replace(r\"\\bDr\\b\", \"Drive\", regex=True)\n",
-                "    df[\"Location\"] = df[\"Location\"].replace(LOCATION_MAPPING)\n",
-                "\n",
-                "    df.columns = df.columns.str.lower()\n",
-                "    df = df.astype({\"time\": \"datetime64[s]\", \"location\": str, \"count\": int})\n",
+                "}"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "BIKE_COUNT_URLS_AND_LOAD_KWARGS = [\n",
+                "    (\"https://at.govt.nz/media/1991027/auckland-trasnport-cycle-counts-jan-dec-2022.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/1991376/auckland-transport-january-2023-cycle-counts.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/1991377/auckland-transport-february-2023-cycle-counts.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/1991436/auckland-transport-march-2023-cycle-counts.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/1992545/april-2023-cycle-counts.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/1992547/may-2023-cycle-counts.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/1992546/june-2023-cycle-counts.xlsx\", {}),\n",
+                "    (\"https://at.govt.nz/media/xs5lybun/at-daily-cycle-data-july-2023.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/t3zlbdn4/at-daily-cycle-data-august-2023.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/53rj40ji/at-daily-cycle-data-september-2023.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/hl0jbsrl/at-daily-cycle-data-october-2023.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/ty4js45t/at-daily-cycle-counts-november-2023.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/1tvdgsgo/at-daily-cycle-counts-december-2023.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/bb4h3wd3/at-daily-cycle-counts-january-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/xlcaru0v/at-daily-cycle-counts-feb-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/4g3hzpp5/at-daily-cycle-counts-march-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/htvezqdn/at-daily-cycle-counts-april-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/ue5cygl0/at-daily-cycle-counts-may-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/3icd2jug/at-daily-cycle-counts-june-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/jbdd1rox/cycle-counts-july-2024.xlsx\", {\"header\": 2, \"na_values\": \"z\"}),\n",
+                "    (\"https://at.govt.nz/media/bvadzmqg/cycle-counts-august-2024.xlsx\", {\"usecols\": \"G:CG\"}),\n",
+                "    (\"https://at.govt.nz/media/lpsfdwbe/auckland-transport-cycle-counts-september-2024.xlsx\", {\"usecols\": \"G:CG\"}),\n",
+                "    (\"https://at.govt.nz/media/ohbhvmrl/auckland-transport-cycle-movements-october-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/chelni1f/auckland-transport-cycle-movements-data-november-2024.xlsx\", {\"header\": 2}),\n",
+                "    (\"https://at.govt.nz/media/zdumuud2/auckland-transport-cycle-movements-december-2024.xlsx\", {\"header\": 2}),\n",
+                "]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def load_cycle_counts(url: str, **read_excel_kwargs) -> pd.DataFrame:\n",
+                "    df = pd.read_excel(url, **read_excel_kwargs)\n",
+                "    df = df.rename(columns={\"Date\": \"date\", \"Date.1\": \"date\", \"Time\": \"date\"})\n",
+                "    df = df.melt(id_vars=\"date\", var_name=\"location\", value_name=\"count\")\n",
                 "    return df"
             ]
         },
@@ -68,26 +135,135 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "urls = [\n",
-                "    \"https://at.govt.nz/media/bb4h3wd3/at-daily-cycle-counts-january-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/xlcaru0v/at-daily-cycle-counts-feb-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/4g3hzpp5/at-daily-cycle-counts-march-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/htvezqdn/at-daily-cycle-counts-april-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/ue5cygl0/at-daily-cycle-counts-may-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/3icd2jug/at-daily-cycle-counts-june-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/jbdd1rox/cycle-counts-july-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/bvadzmqg/cycle-counts-august-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/lpsfdwbe/auckland-transport-cycle-counts-september-2024.xlsx\",\n",
-                "    \"https://at.govt.nz/media/ohbhvmrl/auckland-transport-cycle-movements-october-2024.xlsx\",\n",
-                "]\n",
-                "\n",
                 "dfs = []\n",
-                "for url in tqdm(urls):\n",
-                "    df = load_cycle_counts(url)\n",
+                "for url, load_kwargs in BIKE_COUNT_URLS_AND_LOAD_KWARGS:\n",
+                "    try:\n",
+                "        df = load_cycle_counts(url, **load_kwargs)\n",
+                "    except Exception as e:\n",
+                "        print(\"Could not load data for url: \", url)\n",
+                "        print(\"Reason: \", e)\n",
+                "        continue\n",
                 "    dfs.append(df)\n",
+                "cycle_counts = pd.concat(dfs, axis=0)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# 2022 data\n",
+                "url_2022 = \"https://at.govt.nz/media/1991027/auckland-trasnport-cycle-counts-jan-dec-2022.xlsx\"\n",
                 "\n",
-                "cycle_counts = pd.concat(dfs, ignore_index=True)\n",
-                "cycle_counts = cycle_counts.groupby([\"time\", \"location\"]).sum().reset_index()"
+                "df = pd.read_excel(url_2022)\n",
+                "df = df.melt(id_vars=[\"Date\"], var_name=\"location\", value_name=\"count\")\n",
+                "df = df.rename(columns={\"Date\": \"date\"})\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\" Cyclists?\", \"\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bDr\\b\", \"Drive\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bRd\\b\", \"Road\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bSt\\b\", \"Street\", regex=True)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# 2023 data first part\n",
+                "url = \"https://at.govt.nz/media/1991376/auckland-transport-january-2023-cycle-counts.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/1991377/auckland-transport-february-2023-cycle-counts.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/1991436/auckland-transport-march-2023-cycle-counts.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/1992545/april-2023-cycle-counts.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/1992547/may-2023-cycle-counts.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/1992546/june-2023-cycle-counts.xlsx\"\n",
+                "\n",
+                "df = pd.read_excel(url)\n",
+                "df = df.melt(id_vars=\"Time\", var_name=\"location\", value_name=\"count\")\n",
+                "df = df.rename(columns={\"Time\": \"date\"})\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\" Cyclists?\", \"\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bDr\\b\", \"Drive\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bRd\\b\", \"Road\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bSt\\b\", \"Street\", regex=True)\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# 2023 data second part\n",
+                "url = \"https://at.govt.nz/media/xs5lybun/at-daily-cycle-data-july-2023.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/t3zlbdn4/at-daily-cycle-data-august-2023.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/53rj40ji/at-daily-cycle-data-september-2023.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/hl0jbsrl/at-daily-cycle-data-october-2023.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/ty4js45t/at-daily-cycle-counts-november-2023.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/1tvdgsgo/at-daily-cycle-counts-december-2023.xlsx\"\n",
+                "\n",
+                "df = pd.read_excel(url, header=2)\n",
+                "df = df.melt(id_vars=\"Time\", var_name=\"location\", value_name=\"count\")\n",
+                "df = df.rename(columns={\"Time\": \"date\"})\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\" Cyclists?\", \"\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bDr\\b\", \"Drive\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bRd\\b\", \"Road\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bSt\\b\", \"Street\", regex=True)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# 2024 data first part\n",
+                "url = \"https://at.govt.nz/media/bb4h3wd3/at-daily-cycle-counts-january-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/xlcaru0v/at-daily-cycle-counts-feb-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/4g3hzpp5/at-daily-cycle-counts-march-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/htvezqdn/at-daily-cycle-counts-april-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/ue5cygl0/at-daily-cycle-counts-may-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/3icd2jug/at-daily-cycle-counts-june-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/jbdd1rox/cycle-counts-july-2024.xlsx\"\n",
+                "\n",
+                "df = pd.read_excel(url, header=2)\n",
+                "id_var = \"Date\" if \"Date\" in df.columns else \"Time\"\n",
+                "df = df.melt(id_vars=id_var, var_name=\"location\", value_name=\"count\")\n",
+                "df = df.rename(columns={id_var: \"date\"})\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\" Cyclists?\", \"\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bDr\\b\", \"Drive\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bRd\\b\", \"Road\", regex=True)\n",
+                "df[\"location\"] = df[\"location\"].str.replace(r\"\\bSt\\b\", \"Street\", regex=True)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "url = \"https://at.govt.nz/media/bvadzmqg/cycle-counts-august-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/lpsfdwbe/auckland-transport-cycle-counts-september-2024.xlsx\"\n",
+                "\n",
+                "df = pd.read_excel(url, usecols=\"G:CG\")\n",
+                "df = df.rename(columns={\"Date\": \"date\", \"Date.1\": \"date\", \"Time\": \"date\"})\n",
+                "df = df.melt(id_vars=\"date\", var_name=\"location\", value_name=\"count\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 143,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "url = \"https://at.govt.nz/media/ohbhvmrl/auckland-transport-cycle-movements-october-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/chelni1f/auckland-transport-cycle-movements-data-november-2024.xlsx\"\n",
+                "url = \"https://at.govt.nz/media/zdumuud2/auckland-transport-cycle-movements-december-2024.xlsx\"\n",
+                "\n",
+                "\n",
+                "df = pd.read_excel(url, header=2)\n",
+                "df = df.rename(columns={\"Date\": \"date\", \"Date.1\": \"date\", \"Time\": \"date\"})\n",
+                "df = df.melt(id_vars=\"date\", var_name=\"location\", value_name=\"count\")"
             ]
         },
         {
@@ -277,7 +453,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.4"
+            "version": "3.12.9"
         }
     },
     "nbformat": 4,
